--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -1,4 +1,7 @@
-topbar
+body
+    margin: 0
+    
+    topbar
         div
                   background-color: rgb(178, 42, 190)
 
@@ -8,6 +11,9 @@ topbar
               border-radius: 5px
               color: white
 
+topbar
+    table
+        color: white
 // nav
 
 #display
@@ -18,4 +24,99 @@ topbar
     align-items: center
     justify-content: space-between
 
-    
+
+#dap
+    position: absolute
+    right: 350px
+    width: 1px
+    height: 90px
+    background-color: rgba(217, 216, 216, 0.486)
+
+#der
+
+    border-left: 1px solid rgba(217, 216, 216, 0.486)
+    padding-left: 150px
+
+
+nav
+    table
+        flex-wrap: wrap
+
+nav
+    font-size: 12px
+
+nav
+    table
+        td
+             text-transform: uppercase
+             font-weight: bold
+             border-bottom: 1px solid rgba(217, 216, 216, 0.486)
+        
+
+main
+  margin: 50px 200px
+
+#titre
+  margin-top: 100px
+  margin-bottom: 50px
+
+  
+#ligne
+  width: 60px
+  height: 2px
+  background-color: rgb(178, 42, 190)
+  margin: 0 auto
+
+
+/* main premier */
+#premierContenu
+  margin-top: 50px
+  margin-bottom: 50px
+
+/* main deuxieme */
+#deuxieme
+  margin-bottom: 50px
+
+
+section
+        #deuxieme
+                     ul
+                            flex-wrap: wrap
+                            color: green
+
+
+#deuxieme
+        ul 
+            li::before
+                    padding-right: 5px
+                    content: "•"
+                    color: rgb(178, 42, 190)
+
+#deuxieme 
+            ul 
+                li
+                    margin-bottom: 15px
+                    list-style: none
+
+footer
+        color: white
+        background-color: rgb(58, 58, 58)
+
+footer 
+        div:first-child
+                         padding-top: 50px   
+
+
+footer 
+        div
+             table
+                     td
+                        font-weight: bold
+                        padding-left: 50px
+
+footer 
+        div
+            #txtFoot
+                     margin-top: 70px
+                     padding-bottom: 30px
+                     color: rgba(226, 226, 226, 0.746)
