--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -101,6 +101,7 @@ section
 footer
         color: white
         background-color: rgb(58, 58, 58)
+        padding-bottom: 50px
 
 footer 
         div:first-child
